--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,12 +8,16 @@
   <link rel="stylesheet" href="style.css">
   <title>Practice Technical</title>
 </head>
-<body>
-  
-  <!-- YOUR CODE HERE -->
 
+<body>
+
+  <!-- YOUR CODE HERE -->
+  <h1 style="color: white; background-color: #111927;">Hello CodeWorks</h1>
+  <h6>DJ Aaron</h6>
+  <p>Coding is <strong>Fun!</strong></p>
+  <img src="https://bcw.blob.core.windows.net/public/img/8600856373152463" width="250">
 
   <script src="app.js"></script>
-
 </body>
+
 </html>
